[project]
name = "student-networtk-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email_validator==1.1.3",
    "Flask==2.3.2",
    "Flask_SocketIO==5.1.1",
    "Werkzeug==3.0.0",
    "Pillow==10.2.0",
    "bcrypt==3.2.0",
    "pytest==6.2.5",
    "pytest-steps==1.8.0",
    "coverage==6.3.1",
    "requests>=2.32.3",
    "python-dotenv>=1.1.0",
]
